--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -4,15 +4,35 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+        body{
+            text-align: center;
+            font-size: 16px;
+        }
         h1{
+            font-family: sans-serif;
             font-size: 65px;
             color: orange;
+        }
+        p{
+            text-decoration: underline;
+            font-style: italic;
+            font-weight: 600;
+            font-size: 3em;
         }
         ul{
             background-color: blueviolet;
         }
         .favorite-color{
-            background-color: brown;
+            background-color:cornflowerblue;
+        }
+        #yellow{
+            color: yellow;
+        }
+        #red{
+            color: red;
+        }
+        #brown{
+            color: brown;
         }
     </style>
   </head>
@@ -20,9 +40,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="favorite-color">Qual é a sua cor favorita?</p>
     <ul class="favorite-color">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="yellow">Amarelo</li>
+      <li id="red">Vermelho</li>
+      <li id="brown">Marrom</li>
     </ul>
   </body>
 </html>
