--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,38 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-        body{
-            text-align: center;
-            font-size: 16px;
-        }
-        h1{
-            font-family: sans-serif;
-            font-size: 65px;
-            color: orange;
-        }
-        p{
-            text-decoration: underline;
-            font-style: italic;
-            font-weight: 600;
-            font-size: 3em;
-        }
-        ul{
-            background-color: blueviolet;
-        }
-        .favorite-color{
-            background-color:cornflowerblue;
-        }
-        #yellow{
-            color: yellow;
-        }
-        #red{
-            color: red;
-        }
-        #brown{
-            color: brown;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
