Para fixar 2 -> Agrupamento de Seletores e Pseudoclasses

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1>Lista dos Melhores Sites que já vi</h1>
-    <p>Top 3 dos melhores sites que existem na web</p>
-    <ol>
-        <li>Netflix</li>
-        <li>YouTube</li>
-        <li>Trybe Course</li>
-    </ol>
-    <p>Principais motivos para eu gostar deles</p>
-    <ul>
-        <li>Onde está minha maior fonte de entrenimento</li>
-        <li>Onde está minha maior fonte de conhecimento</li>
-        <li>São plataformas que podem me inspirar a criar</li>
-    </ul>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Pseudoclasses</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Paleta de Cores</h1>
+  <p>Vamos criar uma paleta de cores com as divs abaixo:</p>
+  <div class="primary">
+    <h3>Cor primária</h3>
+  </div>
+  <div class="secondary">
+    <h3>Cor Secundária</h3>
+  </div>
+  <div class="complementary">
+    <h3>Cor Complementar</h3>
+  </div>
+  <div class="dark">
+    <h3>Cor Escura</h3>
+  </div>
+  <div class="light">
+    <h3>Cor Clara</h3>
+  </div>
+</body>
 </html>
