Realizando exercício 3.4 sobre Stomatopoda

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -1,79 +1,105 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranking</title>
-    <style>
-      body {
-          text-align: center;
-          margin: 0;
-      }
-
-      .rank{
-          margin: auto;
-          padding: 0;
-          width: 900px;
-          display: block;
-      }
-
-      .first {
-        display: block;
-        margin: auto;
-        background-color: rgb(235, 200, 84);
-        font-size: 20px;
-        height: 50px;
-        text-align: center;
-        width: 200px;
-      }
-
-      .second {
-        display: inline-block;
-        background-color: rgb(219, 219, 219);
-        font-size: 20px;
-        height: 50px;
-        text-align: center;
-        width: 300px;
-      }
-
-      .third {
-        display: inline-block;
-        background-color: rgb(170, 142, 106);
-        font-size: 20px;
-        height: 50px;
-        text-align: center;
-        width: 300px;
-      }
-
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style.css">
+    <title>Stomatopoda</title>
   </head>
   <body>
+    <!--insira os elementos aqui-->
     <header>
-      <h1>Hackathon Results</h1>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+        <nav>
+            <ul>
+                <li><a href="">Página Inicial</a></li>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
+        </nav>
     </header>
-    <section>
-      <ul class="rank">
-        <li class="first">1º - Equipe 1</li>
-        <li class="second">2º - Equipe 2</li>
-        <li class="third">3º - Equipe 3</li>
-      </ul>
-    </section>
-    <section>
-      <h3>Premiação Primeiro Lugar:</h3>
-      <ul>
-        <li>| R$ 1000,00 por integrante da equipe |</li>
-        <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
-      </ul>
-      <h3>Premiação Segundo Lugar:</h3>
-      <ul>
-        <li>| R$ 600,00 por integrante da equipe |</li>
-        <li>| Participação no processo seletivo para o Bootcamp |</li>
-      </ul>
-      <h3>Premiação Terceiro Lugar:</h3>
-      <ul>
-        <li>| R$ 300,00 por integrante da equipe |</li>
-        <li>| Participação no processo seletivo para o Bootcamp |</li>
-      </ul>
-    </section>
+    <main>
+        <article>
+            <h2>Fatos sobre o Stomatopoda</h2>
+            <section>
+                <h3>Quem é este Pokemon?</h3>
+                <p>Seu nome científico é <em>Odontodactylus scyllarus</em>. Ele também pode ser conhecido como camarão-louva-a-deus-palhaço ou como lagosta-boxeadora. É uma espécie de tamarutaca nativa do Indo-Pacífico, de Guam até a África Oriental.</p>
+                <figure class="stomatopoda-figure">
+                    <img src="https://i.natgeofe.com/n/f46158fc-9bf2-4453-8a15-6b11b323c08e/Peacock-mantis.jpg?w=636&h=424" alt="Imagem de Stomatopoda">
+                    <figcaption>Um Stomatopoda. Credit: <a href="https://i.natgeofe.com/n/f46158fc-9bf2-4453-8a15-6b11b323c08e/Peacock-mantis.jpg?w=636&h=424">Mike Bok</a>.</figcaption>
+                </figure>
+                <table class="infobox">
+                    <tr>
+                        <th>Classificação Cientítica</th>
+                    </tr>
+                    <tr>
+                        <td style="vertical-align: top; text-align: center;" colspan="2">
+                            <table style="margin:0 auto; text-align:left; vertical-align:top;" cellpadding="3">
+                                <tbody>
+                                    <tr>
+                                        <td>Reino:</td>
+                                        <td>Animalia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Filo:</td>
+                                        <td>Arthropoda</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Subfilo:</td>
+                                        <td>Crustacea</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Classe:</td>
+                                        <td>Malacostraca</td>
+                                    </tr>  
+                                    <tr>
+                                        <td>Subclasse:</td>
+                                        <td>Hoplocarida</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ordem:</td>
+                                        <td>Stomatopoda</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr id="video-table">
+                        <th><a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">Clique aqui para assistir sobre</a></th>
+                    </tr>
+                </table>
+            </section>
+            <section>
+                <h3>Lutador Profissional</h3>
+                <p>Um Stomatopoda é capaz de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm².<sup><a href="#cite_ref-5" class="ref_index">[5]</a></sup> Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.<sup><a href="#cite_ref-6" class="ref_index">[6]</a><a href="#cite_ref-7" class="ref_index">[7]</a></sup></p>
+            </section>
+            <section>
+                <h3>Visionário?</h3>
+                <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina.<br>
+
+                Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo. Muitos anfíbios, répteis, aves e insetos possuem quatro tipo de cones, o que significa que espécies dessas classes conseguem ver cores que o nosso cérebro é incapaz de processar. Algumas espécies específicas de borboletas e possivelmente pombos possuem cinco cones de percepção de cor, o que aumenta ainda mais a quantidade de pigmentos que eles são capazes de perceber. O sistema de visão dos estomatópodes possui doze cones sensíveis à luz e outros quatro que filtram a luz (16 cones no total), o que lhes permite ver cores polarizadas e imagens multiespectrais.<sup><a href="#cite_ref-3" class="ref_index">[3]</a></sup><br>
+                    
+                Como cada cone pode ver cerca de 100 cores, os estomatópodes são capazes de ver 1024 cores, ou seja, 1 septilhão de cores. Em comparação, o olho humano vê 106 cores, ou seja, 1 milhão de cores apenas. A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido se ela pode distinguir a luz infravermelha.<sup><a href="#cite_ref-4" class="ref_index">[4]</a></sup></p>
+            </section>
+            <section class="reference">
+                <h3>Referências Bibliográficas</h3>
+                <ol>
+                    <li id="cite_ref-1">Imagem de <a href="https://i.natgeofe.com/n/f46158fc-9bf2-4453-8a15-6b11b323c08e/Peacock-mantis.jpg?w=636&h=424">Mike Bok</a>, retirado do site www.nationalgeographic.com.</li>
+                    <li id="cite_ref-2">Informações Científicas: <a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a></li>
+                    <li id="cite_ref-3"><a href="http://www.nature.com/nature/journal/v401/n6756/full/401873a0.html">Justin Marshall & Johannes Oberwinkler (1999).</a></li>
+                    <li id="cite_ref-4"><a href="https://dx.doi.org/10.1016%2Fj.jembe.2005.09.016">David Cowles, Jaclyn R. Van Dolson, Lisa R. Hainey & Dallas M. Dick (2006).</a></li>
+                    <li id="cite_ref-5">Uma referência</li>
+                    <li id="cite_ref-6">Uma referência</li>
+                    <li id="cite_ref-7">Uma referência</li>
+                </ol>
+            </section>
+        </article>
+        <section>
+
+        </section>
+    </main>
+    <footer>
+        <p>Conteúdo compilado por André Pestana Silva, 2022.</p>
+    </footer>
   </body>
 </html>
