Resolvendo exercício 1 - (Adicionando h1)

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -58,6 +58,10 @@
   <body>
     <script>
       // COLOQUE SEU CÓDIGO AQUI
+      const body = document.querySelector('body');
+      const h1 = document.createElement('h1');
+      h1.innerText = 'Exercício 5.2 - Javascript DOM';
+      body.appendChild(h1);
     </script>
   </body>
 </html>
