Resolvendo exercício 2 - (Adicionando main)

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -64,6 +64,10 @@
     const h1 = document.createElement('h1');
     h1.innerText = 'Exercício 5.2 - Javascript DOM';
     body.appendChild(h1);
+
+    const main = document.createElement('main');
+    main.setAttribute('class', 'main-content');
+    body.appendChild(main);
   </script>
 </body>
 
