--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -59,12 +59,13 @@
 
 <body>
   <script>
-    // COLOQUE SEU CÓDIGO AQUI
+    // Tarefa 1 - Adicionando Body
     const body = document.querySelector('body');
     const h1 = document.createElement('h1');
     h1.innerText = 'Exercício 5.2 - Javascript DOM';
     body.appendChild(h1);
 
+    // Tarefa 2 - Adicionando Main
     const main = document.createElement('main');
     main.setAttribute('class', 'main-content');
     body.appendChild(main);
