--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -59,16 +59,22 @@
 
 <body>
   <script>
+    function createElement(element, parent){
+      parent = document.querySelector(parent);
+      element = document.createElement(element);
+      parent.appendChild(element);
+      return element;
+    }
     // Tarefa 1 - Adicionando Body
-    const body = document.querySelector('body');
-    const h1 = document.createElement('h1');
+    const h1 = createElement('h1', 'body');
     h1.innerText = 'Exercício 5.2 - Javascript DOM';
-    body.appendChild(h1);
 
     // Tarefa 2 - Adicionando Main
-    const main = document.createElement('main');
+    const main = createElement('main', 'body');
     main.setAttribute('class', 'main-content');
-    body.appendChild(main);
+
+    // Tarefa 3 - Adicionando Section
+    
   </script>
 </body>
 
