Tarefa 3 - Criando Section

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -74,7 +74,8 @@
     main.setAttribute('class', 'main-content');
 
     // Tarefa 3 - Adicionando Section
-    
+    const section = createElement('section', 'main');
+    section.setAttribute('class', 'center-content');
   </script>
 </body>
 
