Tarefa 6 - Criando section .right-content

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -84,6 +84,10 @@
     // Tarefa 5 - Adicionando Section .left-content
     section = createElement('section', 'main');
     section.setAttribute('class', 'left-content');
+
+    // Tarefa 6 - Adicionando Section .right-content
+    section = createElement('section', 'main');
+    section.setAttribute('class', 'right-content');
   </script>
 </body>
 
