Tarefa 7 - Adicionando uma imagem filha de .left-content

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -88,6 +88,11 @@
     // Tarefa 6 - Adicionando Section .right-content
     section = createElement('section', 'main');
     section.setAttribute('class', 'right-content');
+
+    // Tarefa 7 - Adicionando IMG
+    const img = createElement('img', '.left-content');
+    img.setAttribute('src', 'https://picsum.photos/200');
+    img.setAttribute('class', 'small-image');
   </script>
 </body>
 
