Tarefa 9 - Adicionando 3 h3 como filha de main

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -101,6 +101,11 @@
       let li = createElement('li', 'ul');
       li.innerText = element;
     });
+
+    // Tarefa 9 - Adicionando 3 h3 filhas de main
+    for (let i = 0; i < 3; i++){
+      const h3 = createElement('h3', 'main')
+    }
   </script>
 </body>
 
