Ajustes do exercício 8

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/index.html
@@ -28,7 +28,7 @@
         <h3>MINHAS TAREFAS</h3>
       </div>
       <div class="input-container">
-        <h3>COMPROMISSOS</h3>
+        <h3>ADICIONAR TAREFAS</h3>
         <label for="task-input">Novo:</label>
         <input type="text"
           id="task-input"
