Exercício 9 - Criando evento de selecionar a cor

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/index.html
@@ -32,7 +32,7 @@
         <label for="task-input">Novo:</label>
         <input type="text"
           id="task-input"
-          placeholder="Escreva seu compromisso"
+          placeholder="Escreva sua tarefa"
         >
         <button id="btn-add">Adicionar</button>
       </div>
