--- a/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/index.html
+++ b/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/index.html
@@ -37,6 +37,12 @@
         colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
         index: 0,
       };
+      
+      const reducer = (state = INITIAL_STATE, action) => {
+        switch (action.type) {
+          default: return state;
+        };
+      };
 
       const store = Redux.createStore(reducer);
 
