4 e 5. Criando eventListeners nos botões e manipulando dom a partir do subscribe

--- a/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/index.html
+++ b/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/index.html
@@ -59,7 +59,21 @@
 
       const store = Redux.createStore(reducer);
 
-      
+      const btnPrev = document.querySelector('#previous');
+      const btnNext = document.querySelector('#next');
+      const value = document.querySelector('#value');
+
+      btnPrev.addEventListener('click', () => {
+        store.dispatch({type: 'PREVIOUS_COLOR'});
+      });
+      btnNext.addEventListener('click', () => {
+        store.dispatch({type: 'NEXT_COLOR'});
+      });
+
+      store.subscribe(() => {
+        const { colors, index } = store.getState();
+        value.innerText = colors[index];
+      });
 
     </script>
   </body>
