6. Criando a funcionalidade de random color que adiciona uma cor aleatória no  array do estado colors

--- a/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/index.html
+++ b/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/index.html
@@ -31,28 +31,48 @@
       <p>Color: <span id="value">white</span></p>
       <button id="previous">Previous color</button>
       <button id="next">Next color</button>
+      <button id="random">Random color</button>
     </div>
     <script>
       const INITIAL_STATE = {
         colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
         index: 0,
       };
+
+      function criarCor() {
+        const oneChar = ['1', '2', '3', '4', '5', '6', '7', '8', '9', 'A', 'B', 'C', 'D', 'E', 'F'];
+        let cor = '#';
+        const aleatorio = () => Math.floor(Math.random() * oneChar.length);
+        for (let i = 0; i < 6; i += 1) {
+            cor += oneChar[aleatorio()];
+        }
+        return cor;
+      }
       
       const reducer = (state = INITIAL_STATE, action) => {
         let newIndex;
+        let MAX_LENGTH = state.colors.length - 1;
         switch (action.type) {
           case 'NEXT_COLOR':
             newIndex = state.index += 1;
             return {
               ...state,
-              index: state.index > 5 ? 0 : newIndex,
+              index: state.index > MAX_LENGTH ? 0 : newIndex,
             };
           case 'PREVIOUS_COLOR':
             newIndex = state.index -= 1;
             return {
               ...state,
-              index: state.index < 0 ? 5 : newIndex,
+              index: state.index < 0 ? MAX_LENGTH : newIndex,
             };
+          case 'RANDOM_COLOR':
+            return {
+              ...state,
+              // O spread abaixo serve para fazer cópia
+              // e evitar bugs. Não use ".push".
+              colors: [...state.colors, criarCor()],
+              index: state.colors.length,
+            }
           default: return state;
         };
       };
@@ -61,7 +81,9 @@
 
       const btnPrev = document.querySelector('#previous');
       const btnNext = document.querySelector('#next');
+      const btnRandom = document.querySelector('#random');
       const value = document.querySelector('#value');
+      const box = document.querySelector('#container');
 
       btnPrev.addEventListener('click', () => {
         store.dispatch({type: 'PREVIOUS_COLOR'});
@@ -69,10 +91,14 @@
       btnNext.addEventListener('click', () => {
         store.dispatch({type: 'NEXT_COLOR'});
       });
+      btnRandom.addEventListener('click', () => {
+        store.dispatch({type: 'RANDOM_COLOR'});
+      });
 
       store.subscribe(() => {
         const { colors, index } = store.getState();
         value.innerText = colors[index];
+        box.style.backgroundColor = colors[index];
       });
 
     </script>
