--- a/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/exercício2.html
+++ b/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/exercício2.html
@@ -44,6 +44,12 @@
         }
       };
 
+      const rootReducer = combineReducers(
+        ( themeReducer, statusReducer )
+      );
+
+      const store = createStore(rootReducer);
+
       const themeButton = document.getElementById('toggle-theme');
       const statusButton = document.getElementById('toggle-status');
 
