--- a/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/exercício2.html
+++ b/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Agora-a-Pratica/exercício2.html
@@ -28,6 +28,11 @@
 
       const themeReducer = (state = THEME_INITIAL_STATE, action) => {
         switch (action.type) {
+          case 'THEME':
+            return {
+              ...state,
+              theme: state.theme === 'dark' ? 'light' : 'dark',
+            };
           default:
             return state;
         }
@@ -39,6 +44,11 @@
 
       const statusReducer = (state = STATUS_INITIAL_STATE, action) => {
         switch (action.type) {
+          case 'STATUS':
+            return {
+              ...state,
+              status: state.status === 'offline' ? 'online' : 'offline',
+            };
           default:
             return state;
         }
